--- a/competitive/c++/.vscode/settings.json
+++ b/competitive/c++/.vscode/settings.json
@@ -17,5 +17,6 @@
         "regex": "cpp",
         "valarray": "cpp",
         "ostream": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
