--- a/competitive/c++/.vscode/settings.json
+++ b/competitive/c++/.vscode/settings.json
@@ -18,7 +18,8 @@
         "valarray": "cpp",
         "ostream": "cpp",
         "ifstream": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "cmath": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
