--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+#Vs code crap
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
