--- a/competitive/c++/.vscode/tasks.json
+++ b/competitive/c++/.vscode/tasks.json
@@ -3,16 +3,16 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ build active file",
-            "command": "/usr/bin/g++",
+            "command": "g++",
             "args": [
-                "-std=c++17",
+                "-std=gnu17",
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
-                "cwd": "/usr/bin"
+                "cwd": ""
             },
             "problemMatcher": [
                 "$gcc"
