--- a/competitive/c++/.vscode/launch.json
+++ b/competitive/c++/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["-std=gnu17"],
+            "args": ["-std=gnu++20 -pedantic -Wall -Wextra"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
